# hashjoin-scm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  clear.sh  revitalize.sh
config/mc/: cpu.cfg
logs/tup-dist-logs/: ssb-join.csv  tpch-join.csv
reproducibility/: README.md  fig10-scripts  fig3-scripts  fig4a-scripts  fig4b-scripts  fig5-scripts  fig6-scripts  fig7-scripts  fig8a-scripts  fig8b-scripts  fig8c-scripts  fig8d-scripts  fig9-scripts  install.sh  plot_all.sh  run_all.sh
reproducibility/fig1-scripts/: plot_3.py  plot_fig1.py  run_fig1.sh  run_page_fault_cost_1.sh  run_persist_cost.sh
scripts/: README.md
scripts/0623-scripts/: plot_page_fault_cost_1_horizontal.py  plot_persist_cost.py  run_page_fault_cost_1.sh  run_persist_cost.sh
scripts/0730-scripts/: plot_nphj_prefetch.py  plot_nphj_thread_scalability.py  run_bash_prefetch.sh  run_bash_thread_scalability.sh  test_nphj_hyperthreading.sh  test_nphj_prefetch_dram.sh  test_nphj_prefetch_nvm.sh  test_nphj_samecore.sh  utils.py
scripts/0731-scripts/: plot_nphj_alignment.py  run_bash.sh  test_nphj_alignment_dram.sh  test_nphj_alignment_nvm.sh  utils.py
scripts/0801-scripts/: nphj_sc_unaligned.h  plot_nphj_alignment.py  test_nphj_alignment_dram.sh  test_nphj_alignment_nvm.sh  utils.py
scripts/0803-scripts/: plot_nphj_alignment_counter.py  test_nphj_alignment_nvm.sh  utils.py
scripts/0808-scripts/: plot_nphj_prefetch_bar_chart_column.py  utils.py
scripts/0815-scripts/: cmp_bw_reg.sh  plot_phj_thread_scalability.py  run_bash.sh  test_phj_hyperthreading.sh  test_phj_samecore.sh  utils.py
scripts/0816-scripts/: plot_phj_part_thr.py  plot_phj_part_thr_bw_reg.py  utils.py
scripts/0819-scripts/: plot_phj_swwcb.py  test_phj_swwcb.sh  utils.py
scripts/0829-scripts/: plot_phj_uniform_pkfk_A.py  run_bash.sh  test_nphj_uniform_pkfk_A.sh  test_phj_uniform_pkfk_A.sh  test_st_nphj_uniform_pkfk_A.sh  test_st_phj_uniform_pkfk_A.sh  utils.py
scripts/1019-scripts/: density.sh  density_profiling.sh  dupfk.sh  dupfk_profiling.sh  pkfk.sh  pkfk_profiling.sh  run_bash.sh  run_bash_profiling.sh  selectivity.sh  selectivity_profiling.sh  zipf.sh  zipf_profiling.sh
scripts/1020-scripts/: nphj.sh  nphj_profiling.sh
scripts/1021-scripts/: billion.sh  billion_profiling.sh
scripts/1022-scripts/: payload.sh  payload_profiling.sh  print_ptr.py  utils.py
scripts/1024-scripts/: plot_3_4.py  plot_billion.py  plot_density.py  plot_dupfk.py  plot_payload.py  plot_pkfk_size_ratio.py  plot_selectivity.py  plot_st_pkfk_A.py  plot_zipf.py
scripts/1028-scripts/: billion.sh  billion_profiling.sh  run_bash.sh
scripts/1030-scripts/: fndly.sh  fndly_profiling.sh  pkfk_b.sh  pkfk_b_profiling.sh  plot_fndly.py  run_bash.sh
scripts/1031-scripts/: cmp_persist_cost.sh  cmp_persist_cost_profiling.sh  page_fault_cmp.sh  page_fault_cmp_profiling.sh  plot_k_epsilon_lambda_2pass.py  plot_pagefault_overhead.py  plot_persist_cost.py  run_bash.sh  run_bash_profiling.sh  utils.py
scripts/1201-scripts/: plot_pkfkA.py  utils.py
scripts/billion-scripts/: billion.sh  datagen.sh  plot_billion.py  plot_fig8d.py  run_fig8d.sh  utils.py
scripts/density-scripts/: density.sh  plot_density.py
scripts/dupfk-scripts/: dupfk.sh  plot_dupfk.py  plot_fig8c.py  run_fig8c.sh
scripts/epsilon-asymmetry-scripts/: pkfk_b.sh  pkfk_n.sh  plot_fig10a.py  plot_fig10b.py  plot_fndly.py  plot_k_epsilon_lambda_2pass.py  run_fig10b.sh  run_fndly.sh
scripts/nphj-alignment-counter-scripts/: plot_fig4b.py  plot_nphj_alignment_counter.py  test_nphj_alignment_nvm.sh  utils.py
scripts/nphj-alignment-runtime-scripts/: plot_fig4a.py  plot_nphj_alignment.py  run_fig4a.sh  test_nphj_alignment_nvm.sh  utils.py
scripts/nphj-prefetching-scripts/: plot_fig3.py  plot_nphj_prefetch_bar_chart_column.py  run_fig3.sh  test_nphj_prefetch_nvm.sh  utils.py
scripts/nphj-thread-scalability-scripts/: plot_nphj_thread_scalability_bar_chart_column.py  test_nphj_hyperthreading.sh  utils.py
scripts/numa-tpch-scripts/: plot_numa_tpch.py  test_numa_phj_nphj.sh  test_tpch.sh  tpch-datagen.sh  utils.py
scripts/pagefault-cost-scripts/: plot_page_fault_cost_1_horizontal.py  run_page_fault_cost_1.sh
scripts/pagefault-persist-scripts/: cmp_persist_cost.sh  page_fault_cmp.sh  plot_pagefault_overhead.py  plot_persist_cost.py
scripts/payload-scripts/: datagen.sh  payload.sh  plot_fig9.py  plot_payload.py  run_fig9.sh
scripts/persist-cost-scripts/: plot_persist_cost.py  run_persist_cost.sh
scripts/phj-join-fanout-scripts/: plot_phj_joinphase_fanout.py  test_phj_joinphase_fanout.sh  utils.py
scripts/phj-join-thread-scalability-scripts/: plot_phj_joinphase_thread_scalability.py  test_phj_joinphase_hyperthreading.sh  utils.py
scripts/phj-part-fanout-scripts/: plot_phj_fanout.py  test_phj_fanout.sh  utils.py
scripts/phj-part-swwcbnt-scripts/: plot_fig5.py  plot_phj_swwcb.py  run_fig5.sh  test_phj_swwcb.sh  utils.py
scripts/phj-part-thread-scalability-scripts/: plot_fig6.py  plot_phj_part_thr_bw_reg.py  run_fig6.sh  test_phj_hyperthreading.sh  utils.py
scripts/pkfkA-scripts/: plot_fig7.py  plot_pkfkA.py  run_fig7.sh  test_nphj_uniform_pkfk_A.sh  test_phj_uniform_pkfk_A.sh  utils.py
scripts/selectivity-scripts/: plot_selectivity.py  selectivity.sh
scripts/single-thread-scripts/: plot_st_pkfk_A.py  test_st_nphj_uniform_pkfk_A.sh  test_st_phj_uniform_pkfk_A.sh
scripts/size-difference-scripts/: pkfk.sh  plot_fig8a.py  plot_pkfk_size_ratio.py  run_fig8a.sh
scripts/skew-scripts/: plot_fig8b.py  plot_zipf.py  run_fig8b.sh  zipf.sh
src/: dram_intermediate.txt  fndly_gen.c  gen.c  implementation_note.txt  main.c  numa_result_note.txt  potential_bug.txt  toy.c
src/algo/: CMakeLists.txt  eth.c  eth.h  nphj.c  nphj.h  params.h  part_buffer.h  phj.c  phj.h  phj_asymm_radix.c  phj_asymm_radix.h  phj_asymm_radix_bw_reg.c  phj_asymm_radix_bw_reg.h  phj_bw_reg.c  phj_bw_reg.h  phj_ind.c  phj_ind.h  phj_ind_uni.c  phj_ind_uni.h  phj_shr.c  phj_shr.h  phj_shr_uni.c  phj_shr_uni.h  ptr_nphj.c  ptr_nphj.h  ptr_phj.c  ptr_phj.h  ptr_phj_bw_reg.c  ptr_phj_bw_reg.h
(+90 files in other folders)
